# django-tables2

./: .bzrignore  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.rst  LICENSE  MANIFEST.in  README  README.md  README.rst  TODO  django-tables.komodoproject  maintenance.py  manage.py  pyproject.toml  requirements-dev.pip  requirements.pip  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml
django_attest/: __init__.py  assertion.py  contexts.py  environment.py  hacks.py  patches.py  reporters.py  runner.py  signals.py  utils.py
django_tables/: TODO  __init__.py  base.py  columns.py  memory.py  models.py  options.py  proxies.py  rows.py  tables.py  utils.py  views.py
django_tables/app/: models.py
django_tables/app/templatetags/: tables.py
django_tables/templates/django_tables/: basic_table.html  table.html
django_tables/templatetags/: django_tables.py
django_tables/tests/: __init__.py  core.py  memory.py  models.py
django_tables/tests/testapp/: models.py
django_tables2/: __init__.py  columns.py  config.py  data.py  models.py  paginators.py  rows.py  tables.py  utils.py  views.py
django_tables2/columns/: __init__.py  base.py  booleancolumn.py  checkboxcolumn.py  datecolumn.py  datetimecolumn.py  emailcolumn.py  filecolumn.py  jsoncolumn.py  linkcolumn.py  manytomanycolumn.py  templatecolumn.py  timecolumn.py  urlcolumn.py
django_tables2/export/: TODO.md  __init__.py  export.py  views.py
django_tables2/locale/cs/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/de/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/el/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/en/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/es/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/fr/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/hu/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/it/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/lt/LC_MESSAGES/: django.po
django_tables2/locale/nb/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/nl/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/pl/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/pt_PT/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/ru/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/sv/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/uk/LC_MESSAGES/: django.mo  django.po
django_tables2/locale/zh-hans/LC_MESSAGES/: django.po
django_tables2/templates/django_tables2/: basic_table.html  bootstrap-responsive.html  bootstrap.html  bootstrap4.html  bootstrap5-responsive.html  bootstrap5.html  bulma.html  cell_l10n.html  semantic.html  table.html
django_tables2/templatetags/: django_tables2.py
docs/: Makefile  columns.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  spelling_wordlist.txt  templates.rst
docs/features/: index.rst  ordering.rst  pagination.rst
docs/pages/: accessors.rst  api-reference.rst  builtin-columns.rst  column-attributes.rst  column-headers-and-footers.rst  column-headers.rst  custom-data.rst  custom-rendering.rst  customizing.rst  export.rst  faq.rst  filtering.rst  generic-mixins.rst  getting-started.rst  glossary.rst  installation.rst  internal.rst  localization-control.rst  order-by-accessors.rst  ordering.rst  pagination.rst  performance.rst  pinned-rows.rst  query-string-fields.rst  reference.rst  swapping-columns.rst  table-data.rst  table-mixins.rst  tables-for-models.rst  template-filters.rst  template-tags.rst  tutorial.rst  upgrade-changelog.rst  upgrading-from-v1.rst
docs/types/: index.rst  memory.rst  models.rst  sql.rst
example/: README.md  README.rst  manage.py  pyproject.toml  requirements.pip  requirements.txt  settings.py  urls.py
example/app/: admin.py  data.py  filters.py  models.py  tables.py  tests.py  views.py
example/app/fixtures/: initial_data.json
example/app/migrations/: 0001_initial.py  0002_auto_20180416_0959.py  0002_person_country.py  0003_auto_20160730_0248.py  0003_auto_20180416_1020.py  0004_auto_fix_deprecation_warnings.py
example/templates/: base.html  bootstrap4_template.html  bootstrap5_template.html  bootstrap_template.html  bulma_template.html  checkbox_example.html  class_based.html  country_detail.html  example.html  extended_table.html  index.html  multiTable.html  multiple.html  person_detail.html  semantic_template.html  tutorial.html
requirements/: common.pip  django-1.2.x.pip  django-1.3.x.pip  django-1.4.x.pip  django-1.5.x.pip  django-1.6.x.pip  django-1.7.x.pip  django-1.8.x.pip  django-dev.pip
tests/: __init__.py  columns.py  config.py  contextdecorator.py  core.py  general.py  models.py  rows.py  settings.py  templates.py  test.py  test_basic.py  test_config.py  test_core.py  test_data.py  test_dynamically_add_columns.py  test_dynamically_add_show_hide_columns.py  test_export.py  test_extra_columns.py  test_faq.py  test_footer.py  test_memory.py  test_models.py  test_ordering.py  test_paginators.py  test_pinned_rows.py  test_rows.py  test_tabledata.py  test_templates.py  test_templatetags.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
tests/app/: models.py  settings.py  tests.py  urls.py  views.py
tests/app/fixtures/: tests.json
tests/app/migrations/: 0001_initial.py  0002_auto_20200812_0958.py
tests/app/templates/: column.html  dummy.html  minimal.html  multiple.html  template.html  test_template_column.html
tests/columns/: test_booleancolumn.py  test_checkboxcolumn.py  test_column.py  test_datecolumn.py  test_datetimecolumn.py  test_emailcolumn.py  test_filecolumn.py  test_general.py  test_initialsortcolumn.py  test_jsoncolumn.py  test_linkcolumn.py  test_manytomanycolumn.py  test_templatecolumn.py  test_timecolumn.py  test_urlcolumn.py
tests/export/: test_csv.py  test_export.py
tests/testapp/: models.py  search_indexes.py  settings.py  urls.py  views.py
(+8 files in other folders)
