[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name="django-tables2"
description="Table/data-grid framework for Django"
readme = "README.md"
authors = [
    {name="Bradley Ayers",email="bradley.ayers@gmail.com"},
    {name="Jan Pieter Waagmeester", email="jieter@jieter.nl"},
]
license = {file = "LICENSE"}
dynamic = ["version"]
url="https://github.com/jieter/django-tables2/"
install_requires=["Django>=4.2"]
extras_require={tablib = ["tablib"]}
python_requires = ">=3.9,<=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[tool.hatch.version]
path = "django_tables2/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["docs"]

[tool.hatch.build.targets.wheel]
packages = ["django_tables2"]

[tool.setuptools.dynamic]
version = {attr = "django_tables2.__version__"}

[tool.black]
line-length = 100
