[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Bradley Ayers", email = "bradley.ayers@gmail.com"},
  {name = "Jan Pieter Waagmeester", email = "jieter@jieter.nl"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries"
]
dependencies = ["Django>=4.2"]
description = "Table/data-grid framework for Django"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "django-tables2"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
tablib = ["tablib"]

[project.urls]
Changelog = "https://github.com/jieter/django-tables2/blob/master/CHANGELOG.md"
Documentation = "https://django-tables2.readthedocs.io/en/latest/"
Homepage = "https://github.com/jieter/django-tables2/"
Readme = "https://github.com/jieter/django-tables2/blob/master/README.md"

[tool.black]
line-length = 100

[tool.hatch.build.targets.sdist]
exclude = ["docs"]

[tool.hatch.build.targets.wheel]
packages = ["django_tables2"]

[tool.hatch.version]
path = "django_tables2/__init__.py"

[tool.setuptools.dynamic]
version = {attr = "django_tables2.__version__"}
